--- a/templates/about.html
+++ b/templates/about.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
     <div class="jumbotron">
+        <h3>Objective:</h3><h4> Give ability to user to fetch the news from his/her favourite sites. Using machine Learning models classify the news. Also help user to know which news is real and which is fake.</h4>
+        <br>
         Following functionality implemented in this project:
         <ul>
             <li>Custom user model</li>
             <li>Collecting news from different websites</li>
-            <li>Classifying news using Machine Learning (Pending)</li>
-            <li>Detecting Fake News using Machine Learning (Pending)</li>
+            <li>Classifying news using Machine Learning (Needs improvement)</li>
+            <li>Detecting Fake News using Machine Learning (Needs improvement)</li>
         </ul>
     </div>
 {% endblock %}
